toolchain/parse/src/expression/snapshots/knot_parse__expression__tests__primitive_string.snap
---
source: toolchain/parse/src/expression/mod.rs
expression: ast
---
Expression(
    Node(
        Primitive(
            String(
                "foo",
            ),
        ),
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                5,
            ),
        ),
        (),
    ),
)
