toolchain/parse/src/expression/snapshots/knot_parse__expression__tests__primitive_true.snap
---
source: toolchain/parse/src/expression/mod.rs
expression: ast
---
Expression(
    Node(
        Primitive(
            Boolean(
                true,
            ),
        ),
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                4,
            ),
        ),
        (),
    ),
)
