toolchain/parse/src/expression/snapshots/knot_parse__expression__tests__style.snap
---
source: toolchain/parse/src/expression/mod.rs
expression: ast
---
Expression(
    Node(
        Style(
            [
                (
                    "foo",
                    Expression(
                        Node(
                            Primitive(
                                Nil,
                            ),
                            Range(
                                Point(
                                    1,
                                    14,
                                ),
                                Point(
                                    1,
                                    16,
                                ),
                            ),
                            (),
                        ),
                    ),
                ),
            ],
        ),
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                18,
            ),
        ),
        (),
    ),
)
