toolchain/parse/src/expression/snapshots/knot_parse__expression__tests__style_empty.snap
---
source: toolchain/parse/src/expression/mod.rs
expression: ast
---
Expression(
    Node(
        Style(
            [],
        ),
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                8,
            ),
        ),
        (),
    ),
)
