toolchain/parse/src/expression/snapshots/knot_parse__expression__tests__unary_negative_operation.snap
---
source: toolchain/parse/src/expression/mod.rs
expression: ast
---
Expression(
    Node(
        UnaryOperation(
            Negate,
            Expression(
                Node(
                    Primitive(
                        Nil,
                    ),
                    Range(
                        Point(
                            1,
                            2,
                        ),
                        Point(
                            1,
                            4,
                        ),
                    ),
                    (),
                ),
            ),
        ),
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                4,
            ),
        ),
        (),
    ),
)
